Fixed varying image width on firefox

--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,7 @@ main {
 
 .menu-image {
   max-width: 300px;
+  min-width: 300px;
 }
 
 .menu-image img {
